# GreenEngine

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES.md
.github/workflows/: ci.yml  release.yml
crates/engine-core/: Cargo.toml
crates/engine-core/src/: engine.rs  green_model.rs  kv.rs  lib.rs  predictor.rs  trace.rs
crates/engine-core/testdata/: expert_manifest.txt
crates/ge/: Cargo.toml
crates/ge/src/: main.rs
crates/green-format/: Cargo.toml
crates/green-format/src/: checksum.rs  lib.rs  manifest.rs  package.rs  schema.rs  tensor.rs
crates/green-format/tests/fixtures/: pack_model_manifest.json
docs/: BENCHMARKS.md
runner/: green_run.py  green_ui.py
