[package]
name = "ge"
version = "1.1.0"
edition = "2021"
description = "Green Engine CLI — run, compress (via Green Compress), and manage local LLMs"

[dependencies]
engine-core = { path = "../engine-core" }

[[bin]]
name = "ge"
path = "src/main.rs"

# Shells out to curl/git/make/greencompress/llama.cpp; links engine-core for .green routing.
