[package]
name = "green-format"
version = "0.2.0"
edition = "2021"
description = "Shared manifest and package types for Green Engine .green model packages"
license = "LicenseRef-Proprietary"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"

[dev-dependencies]
tempfile = "3.20.0"
